# ai-github-qa

./: .gitignore  README.md  dev.env  main.py  pyproject.toml
.chroma_store/: chroma.sqlite3
app/: chunker.py  embedder.py  github_fetcher.py  qa_engine.py  vector_store.py
app/core/: config.py
ui/: app.py
