[project]
name = "ai-github-qa"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.0.15",
    "ollama>=0.5.1",
    "openai>=1.98.0",
    "pydantic-settings>=2.10.1",
    "requests>=2.32.4",
    "sentence-transformers>=5.0.0",
    "streamlit>=1.47.1",
    "tiktoken>=0.9.0",
    "watchdog>=6.0.0",
]
